--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   package_info_plus: ^9.0.0
   image_picker: ^1.1.2
   http_parser: ^4.0.2
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
